<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#e9ebee"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        tools:context=".fragments.CreatePostFragment"
        android:id="@+id/constraintView">

    <TextView android:layout_width="292dp"
              android:layout_height="wrap_content"
              android:text="@string/create_a_post"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="8dp"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="8dp"
              android:textSize="20sp" android:id="@+id/descriptionTitle"
              app:layout_constraintHorizontal_bias="0.077"/>

    <EditText
            android:layout_width="292dp"
            android:layout_height="40dp"
            android:inputType="text"
            android:ems="10"
            android:background="@drawable/rounded_corners_small"
            android:backgroundTint="@android:color/white"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/title"
            android:hint="@string/make_a_memorable_title"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/descriptionTitle"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" app:layout_constraintHorizontal_bias="0.0"/>

    <ImageButton
            android:layout_width="37dp"
            android:layout_height="37dp"
            app:srcCompat="@drawable/camera_dark"
            android:id="@+id/cameraButton"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/addPostBtn"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.096"
            android:background="@drawable/rounded_corners_small"
            android:backgroundTint="#E1E1E1"
            android:contentDescription="cameraButton"
            app:layout_constraintTop_toBottomOf="@+id/fragment" android:layout_marginTop="16dp"/>

    <fragment
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:navGraph="@navigation/create_post_nav"
            android:id="@+id/fragment"
            app:layout_constraintTop_toBottomOf="@+id/title" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="12dp"/>

    <ImageButton
            android:layout_width="37dp"
            android:layout_height="37dp"
            app:srcCompat="@drawable/video_dark"
            android:id="@+id/videoButton"
            app:layout_constraintEnd_toStartOf="@+id/addPostBtn"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_corners_small"
            android:backgroundTint="#E1E1E1"
            android:contentDescription="@string/camerabutton"
            app:layout_constraintStart_toEndOf="@+id/cameraButton"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.074"
            app:layout_constraintTop_toBottomOf="@+id/fragment" android:layout_marginTop="16dp"/>

    <ImageButton
            android:layout_width="37dp"
            android:layout_height="37dp"
            app:srcCompat="@drawable/location_dark"
            android:id="@+id/mapButton"
            app:layout_constraintEnd_toStartOf="@+id/addPostBtn"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_corners_small"
            android:backgroundTint="#E1E1E1"
            android:contentDescription="@string/mapbutton"
            app:layout_constraintStart_toEndOf="@+id/videoButton"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.098"
            app:layout_constraintTop_toBottomOf="@+id/fragment" android:layout_marginTop="16dp"/>

    <Button
            android:text="@string/add_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/addPostBtn"
            app:layout_constraintHorizontal_bias="0.903"
            app:layout_constraintTop_toBottomOf="@+id/fragment" android:layout_marginTop="12dp"/>
    <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            tools:src="@tools:sample/avatars[0]"
            android:id="@+id/takenImage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/descriptionTitle" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>